--- a/packages/directive/loading.css
+++ b/packages/directive/loading.css
@@ -3,8 +3,11 @@
     width: 100%;
     height: 100%;
     background-color: rgba(255,255,255,0.9);
-  
+
     top: 0;
+  }
+  .mt-loading-color{
+      background-color: #67CF22;
   }
   .loading-warp{
     width:40px;
@@ -24,7 +27,6 @@
       width:100%;
       height:100%;
       border-radius: 50%;
-      background-color: #67CF22;
       opacity: 0.6;
       -webkit-animation: bounce 2.0s infinite ease-in-out;
       animation: bounce 2.0s infinite ease-in-out;
@@ -44,12 +46,11 @@
       100%{transform:scale(0.0);}
   }
 
-  
+
   .loading-warp span{
       width:4px;
       height:30px;
       display:inline-block;
-      background:#67CF22;;
       margin-left: 3px;
       animation: mtMove 1s infinite ease-in-out;
       -webkit-animation:mtMove 1s infinite ease-in-out;
